[gd_scene load_steps=42 format=2]

[ext_resource path="res://Resources/Title.png" type="Texture" id=1]
[ext_resource path="res://Scenes/TitleScreen/LoginScreen.gd" type="Script" id=2]
[ext_resource path="res://Scenes/TitleScreen/TitleScreen.gd" type="Script" id=3]
[ext_resource path="res://Scenes/TitleScreen/UserScreen.gd" type="Script" id=4]
[ext_resource path="res://Resources/fonts/Bungee-Regular-20.tres" type="DynamicFont" id=5]
[ext_resource path="res://Resources/Styleboxes/WhiteButton.stylebox" type="StyleBox" id=6]
[ext_resource path="res://Resources/Icons/puzzle.png" type="Texture" id=7]
[ext_resource path="res://Resources/Styleboxes/PurpleButton.stylebox" type="StyleBox" id=8]
[ext_resource path="res://Resources/Styleboxes/RootBackground.tres" type="StyleBox" id=9]
[ext_resource path="res://Resources/Icons/google.png" type="Texture" id=10]
[ext_resource path="res://Scenes/CButton.tscn" type="PackedScene" id=11]
[ext_resource path="res://Resources/Icons/at.png" type="Texture" id=12]
[ext_resource path="res://Resources/Icons/guest.png" type="Texture" id=13]
[ext_resource path="res://Scenes/TitleScreen/Screens.gd" type="Script" id=14]
[ext_resource path="res://Scenes/TitleScreen/BottomButton.gd" type="Script" id=15]
[ext_resource path="res://Resources/Icons/leaderboard.png" type="Texture" id=16]
[ext_resource path="res://Resources/Icons/globe.png" type="Texture" id=17]
[ext_resource path="res://Resources/fonts/Bungee-Regular-15.tres" type="DynamicFont" id=18]
[ext_resource path="res://Scenes/TitleScreen/Score.gd" type="Script" id=19]
[ext_resource path="res://Scenes/SceneBottomButton.tscn" type="PackedScene" id=20]
[ext_resource path="res://Resources/fonts/Bungee-Regular-12.tres" type="DynamicFont" id=21]
[ext_resource path="res://Scenes/TitleScreen/ProfileDialog.gd" type="Script" id=22]

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.788235, 0.788235, 0.788235, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.6, 0.615686, 0.623529, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.6, 0.615686, 0.623529, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.6, 0.615686, 0.623529, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.788235, 0.788235, 0.788235, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.6, 0.615686, 0.623529, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.67451, 0.819608, 0.466667, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.541176, 0.678431, 0.364706, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.909804, 0.909804, 0.890196, 0.792157 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.788235, 0.788235, 0.788235, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.6, 0.615686, 0.623529, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.52549, 0.537255, 0.545098, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.52549, 0.537255, 0.545098, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="Theme" id=23]
default_font = ExtResource( 21 )
Label/colors/font_color = Color( 0.768627, 0.768627, 0.768627, 1 )

[sub_resource type="StyleBoxEmpty" id=24]

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.415686, 0.427451, 0.431373, 1 )
corner_radius_top_left = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.52549, 0.537255, 0.545098, 1 )
corner_radius_top_right = 3
corner_radius_bottom_right = 3

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.415686, 0.427451, 0.435294, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxEmpty" id=22]

[sub_resource type="StyleBoxFlat" id=27]
bg_color = Color( 0.788235, 0.788235, 0.788235, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.52549, 0.537255, 0.545098, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="BackgroundPanel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = ExtResource( 9 )

[node name="BackgroundTexture" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Sorbet" type="TextureRect" parent="."]
anchor_right = 1.0
margin_top = 111.0
margin_bottom = 176.0
mouse_filter = 2
texture = ExtResource( 1 )
stretch_mode = 6

[node name="Top" type="HBoxContainer" parent="."]
anchor_left = 0.0277778
anchor_top = 0.0125
anchor_right = 0.972222
anchor_bottom = 0.0525

[node name="Score" type="Panel" parent="Top"]
margin_right = 166.0
margin_bottom = 32.0
rect_min_size = Vector2( 166, 32 )
custom_styles/panel = SubResource( 10 )
script = ExtResource( 19 )

[node name="IconPanel" type="Panel" parent="Top/Score"]
margin_right = 32.0
margin_bottom = 2.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="TextureRect" type="TextureRect" parent="Top/Score/IconPanel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Top/Score"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -16.0
margin_right = 69.0
margin_bottom = 16.0
custom_colors/font_color = Color( 0.6, 0.615686, 0.623529, 1 )
custom_fonts/font = ExtResource( 18 )
text = "2000000 PTS"
valign = 1
clip_text = true

[node name="Language" type="Button" parent="Top"]
margin_left = 233.0
margin_right = 340.0
margin_bottom = 32.0
rect_min_size = Vector2( 107, 32 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 10
size_flags_vertical = 0
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 9 )

[node name="PanelContainer" type="Panel" parent="Top/Language"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
mouse_filter = 2
custom_styles/panel = SubResource( 8 )

[node name="TextureRect" type="TextureRect" parent="Top/Language/PanelContainer"]
modulate = Color( 0.847059, 0.964706, 0.678431, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 32, 32 )
mouse_filter = 2
texture = ExtResource( 17 )
stretch_mode = 4

[node name="Label" type="Label" parent="Top/Language"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.5
margin_top = -15.0
margin_right = 51.5
margin_bottom = 15.0
rect_min_size = Vector2( 72, 30 )
custom_colors/font_color = Color( 0.52549, 0.537255, 0.545098, 1 )
custom_fonts/font = ExtResource( 5 )
text = "EN"
align = 1
valign = 1
clip_text = true

[node name="Screens" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -51.0
margin_right = 150.0
margin_bottom = 139.0
rect_min_size = Vector2( 300, 0 )
mouse_filter = 2
custom_styles/panel = SubResource( 5 )
script = ExtResource( 14 )
__meta__ = {
"_edit_group_": true
}

[node name="LoginScreen" type="PanelContainer" parent="Screens" groups=["auth_screen"]]
visible = false
margin_right = 300.0
margin_bottom = 193.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 4 )
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Main" type="VBoxContainer" parent="Screens/LoginScreen"]
margin_right = 300.0
margin_bottom = 193.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/separation = 20

[node name="GooglePlay" parent="Screens/LoginScreen/Main" instance=ExtResource( 11 )]
margin_right = 300.0
margin_bottom = 51.0
ui_icon = ExtResource( 10 )
ui_text = "Google PLay"
ui_font_color = Color( 0.847059, 0.964706, 0.678431, 1 )

[node name="Email" parent="Screens/LoginScreen/Main" instance=ExtResource( 11 )]
margin_top = 71.0
margin_right = 300.0
margin_bottom = 122.0
custom_styles/normal = ExtResource( 6 )
ui_icon = ExtResource( 12 )
ui_text = "Email"
ui_font_color = Color( 0.6, 0.615686, 0.623529, 1 )

[node name="Guest" parent="Screens/LoginScreen/Main" instance=ExtResource( 11 )]
margin_top = 142.0
margin_right = 300.0
margin_bottom = 193.0
custom_styles/normal = ExtResource( 6 )
ui_icon = ExtResource( 13 )
ui_text = "as a guest"
ui_font_color = Color( 0.6, 0.615686, 0.623529, 1 )

[node name="LoginPanel" type="PanelContainer" parent="Screens/LoginScreen"]
visible = false
margin_right = 230.0
margin_bottom = 260.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Screens/LoginScreen/LoginPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 223.0
margin_bottom = 253.0
custom_constants/separation = 10

[node name="GridContainer" type="GridContainer" parent="Screens/LoginScreen/LoginPanel/VBoxContainer"]
margin_right = 216.0
margin_bottom = 52.0
custom_constants/hseparation = 10
columns = 2

[node name="EmailLabel" type="Label" parent="Screens/LoginScreen/LoginPanel/VBoxContainer/GridContainer"]
margin_top = 5.0
margin_right = 60.0
margin_bottom = 19.0
text = "email"

[node name="EmailEdit" type="LineEdit" parent="Screens/LoginScreen/LoginPanel/VBoxContainer/GridContainer"]
margin_left = 70.0
margin_right = 216.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "john@doe.com"

[node name="PasswordLabel" type="Label" parent="Screens/LoginScreen/LoginPanel/VBoxContainer/GridContainer"]
margin_top = 33.0
margin_right = 60.0
margin_bottom = 47.0
text = "Password"

[node name="PasswordEdit" type="LineEdit" parent="Screens/LoginScreen/LoginPanel/VBoxContainer/GridContainer"]
margin_left = 70.0
margin_top = 28.0
margin_right = 216.0
margin_bottom = 52.0
size_flags_horizontal = 3
secret = true

[node name="Buttons" type="HBoxContainer" parent="Screens/LoginScreen/LoginPanel/VBoxContainer"]
margin_top = 62.0
margin_right = 216.0
margin_bottom = 82.0

[node name="Button" type="Button" parent="Screens/LoginScreen/LoginPanel/VBoxContainer/Buttons"]
margin_right = 106.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Back"

[node name="Login" type="Button" parent="Screens/LoginScreen/LoginPanel/VBoxContainer/Buttons"]
margin_left = 110.0
margin_right = 216.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Login"

[node name="SignupPanel" type="PanelContainer" parent="Screens/LoginScreen"]
visible = false
margin_right = 230.0
margin_bottom = 260.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Screens/LoginScreen/SignupPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 223.0
margin_bottom = 253.0
custom_constants/separation = 10

[node name="GridContainer" type="GridContainer" parent="Screens/LoginScreen/SignupPanel/VBoxContainer"]
margin_right = 216.0
margin_bottom = 80.0
custom_constants/hseparation = 10
columns = 2

[node name="EmailLabel" type="Label" parent="Screens/LoginScreen/SignupPanel/VBoxContainer/GridContainer"]
margin_top = 5.0
margin_right = 114.0
margin_bottom = 19.0
text = "email"

[node name="EmailEdit" type="LineEdit" parent="Screens/LoginScreen/SignupPanel/VBoxContainer/GridContainer"]
margin_left = 124.0
margin_right = 216.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "john@doe.com"

[node name="PasswordLabel" type="Label" parent="Screens/LoginScreen/SignupPanel/VBoxContainer/GridContainer"]
margin_top = 33.0
margin_right = 114.0
margin_bottom = 47.0
text = "Password"

[node name="PasswordEdit" type="LineEdit" parent="Screens/LoginScreen/SignupPanel/VBoxContainer/GridContainer"]
margin_left = 124.0
margin_top = 28.0
margin_right = 216.0
margin_bottom = 52.0
size_flags_horizontal = 3
secret = true

[node name="ConfirmLabel" type="Label" parent="Screens/LoginScreen/SignupPanel/VBoxContainer/GridContainer"]
margin_top = 61.0
margin_right = 114.0
margin_bottom = 75.0
text = "Password Confirm"

[node name="ConfirmEdit" type="LineEdit" parent="Screens/LoginScreen/SignupPanel/VBoxContainer/GridContainer"]
margin_left = 124.0
margin_top = 56.0
margin_right = 216.0
margin_bottom = 80.0
size_flags_horizontal = 3
secret = true

[node name="Buttons" type="HBoxContainer" parent="Screens/LoginScreen/SignupPanel/VBoxContainer"]
margin_top = 90.0
margin_right = 216.0
margin_bottom = 110.0

[node name="Signup" type="Button" parent="Screens/LoginScreen/SignupPanel/VBoxContainer/Buttons"]
margin_right = 216.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "SIGNUP"

[node name="UserScreen" type="PanelContainer" parent="Screens" groups=["auth_screen"]]
margin_right = 300.0
margin_bottom = 190.0
mouse_filter = 2
custom_styles/panel = SubResource( 6 )
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="Screens/UserScreen"]
margin_right = 300.0
margin_bottom = 190.0
mouse_filter = 2
custom_constants/separation = 20

[node name="ObjectNaming" parent="Screens/UserScreen/VBoxContainer" instance=ExtResource( 11 )]
margin_right = 300.0
margin_bottom = 51.0
ui_icon = ExtResource( 7 )
ui_text = "Object Naming"
ui_font_color = Color( 0.847059, 0.964706, 0.678431, 1 )

[node name="Leaderboard" parent="Screens/UserScreen/VBoxContainer" instance=ExtResource( 11 )]
margin_top = 71.0
margin_right = 300.0
margin_bottom = 122.0
custom_styles/normal = ExtResource( 8 )
ui_icon = ExtResource( 16 )
ui_text = "Leaderboard"
ui_font_color = Color( 0.666667, 0.623529, 0.792157, 1 )

[node name="Friends" type="Button" parent="Screens/UserScreen/VBoxContainer"]
visible = false
margin_top = 140.0
margin_right = 230.0
margin_bottom = 190.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = ExtResource( 5 )
text = "Friends"
__meta__ = {
"_edit_lock_": true
}

[node name="BottomButton" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = 330.0
margin_right = 150.0
margin_bottom = 381.0
rect_min_size = Vector2( 300, 51 )
custom_styles/panel = SubResource( 7 )
script = ExtResource( 15 )

[node name="CreateAccount" parent="BottomButton" instance=ExtResource( 20 )]
visible = false
margin_left = 0.0
margin_top = 0.0
margin_right = 300.0
margin_bottom = 51.0
text = "Create Account"

[node name="Profile" type="Button" parent="BottomButton"]
margin_right = 300.0
margin_bottom = 51.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.666667, 0.623529, 0.792157, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/normal = ExtResource( 8 )
text = "Profile"

[node name="ProfileDialog" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 19 )
script = ExtResource( 22 )

[node name="CenterContainer" type="CenterContainer" parent="ProfileDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="ProfileDialog/CenterContainer"]
margin_left = 27.0
margin_top = 259.0
margin_right = 333.0
margin_bottom = 541.0
rect_min_size = Vector2( 300, 0 )
custom_constants/separation = 12

[node name="PanelContainer" type="PanelContainer" parent="ProfileDialog/CenterContainer/VBoxContainer"]
margin_right = 306.0
margin_bottom = 220.0
rect_min_size = Vector2( 306, 220 )
custom_styles/panel = SubResource( 13 )

[node name="MarginContainer" type="MarginContainer" parent="ProfileDialog/CenterContainer/VBoxContainer/PanelContainer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 303.0
margin_bottom = 217.0
custom_constants/margin_top = -46

[node name="VBox" type="VBoxContainer" parent="ProfileDialog/CenterContainer/VBoxContainer/PanelContainer/MarginContainer"]
margin_top = -46.0
margin_right = 300.0
margin_bottom = 214.0
custom_constants/separation = 14

[node name="Profile" type="PanelContainer" parent="ProfileDialog/CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBox"]
margin_left = 87.0
margin_right = 212.0
margin_bottom = 125.0
rect_min_size = Vector2( 125, 125 )
size_flags_horizontal = 6
custom_styles/panel = SubResource( 14 )

[node name="Info" type="VBoxContainer" parent="ProfileDialog/CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBox"]
margin_left = 15.0
margin_top = 139.0
margin_right = 285.0
margin_bottom = 239.0
rect_min_size = Vector2( 270, 0 )
size_flags_horizontal = 6
custom_constants/separation = 5

[node name="Username" type="Label" parent="ProfileDialog/CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBox/Info"]
margin_right = 270.0
margin_bottom = 38.0
rect_min_size = Vector2( 0, 38 )
custom_colors/font_color = Color( 0.788235, 0.788235, 0.788235, 1 )
custom_fonts/font = ExtResource( 18 )
custom_styles/normal = SubResource( 15 )
text = "@USERNAME"
align = 1
valign = 1

[node name="Rank" type="Label" parent="ProfileDialog/CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBox/Info"]
margin_top = 43.0
margin_right = 270.0
margin_bottom = 69.0
rect_min_size = Vector2( 0, 26 )
custom_colors/font_color = Color( 0.788235, 0.788235, 0.788235, 1 )
custom_fonts/font = ExtResource( 21 )
custom_styles/normal = SubResource( 15 )
text = "Rank #000"
align = 1
valign = 1

[node name="Level" type="Panel" parent="ProfileDialog/CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBox/Info"]
margin_top = 74.0
margin_right = 270.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 26 )
theme = SubResource( 23 )
custom_styles/panel = SubResource( 24 )

[node name="Number" type="Label" parent="ProfileDialog/CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBox/Info/Level"]
margin_right = 39.0
margin_bottom = 26.0
rect_min_size = Vector2( 39, 0 )
size_flags_vertical = 1
custom_styles/normal = SubResource( 16 )
text = "18"
align = 1
valign = 1

[node name="ProgressBar" type="PanelContainer" parent="ProfileDialog/CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBox/Info/Level"]
margin_left = 39.0
margin_right = 270.0
margin_bottom = 26.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 20 )

[node name="Margin" type="MarginContainer" parent="ProfileDialog/CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBox/Info/Level/ProgressBar"]
margin_right = 231.0
margin_bottom = 26.0
custom_constants/margin_right = 7
custom_constants/margin_top = 5
custom_constants/margin_left = 7
custom_constants/margin_bottom = 5

[node name="ProgressBar" type="ProgressBar" parent="ProfileDialog/CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBox/Info/Level/ProgressBar/Margin"]
margin_left = 7.0
margin_top = 5.0
margin_right = 224.0
margin_bottom = 21.0
size_flags_vertical = 1
custom_styles/fg = SubResource( 21 )
custom_styles/bg = SubResource( 22 )
value = 100.0
percent_visible = false

[node name="Label" type="Label" parent="ProfileDialog/CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBox/Info/Level"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -6.5
margin_right = 50.0
margin_bottom = 6.5
text = "00000 / 00000"
align = 1
valign = 1
clip_text = true

[node name="Logout" type="Button" parent="ProfileDialog/CenterContainer/VBoxContainer"]
margin_top = 232.0
margin_right = 306.0
margin_bottom = 282.0
rect_min_size = Vector2( 0, 50 )
custom_colors/font_color_focus = Color( 0.6, 0.615686, 0.623529, 1 )
custom_colors/font_color = Color( 0.6, 0.615686, 0.623529, 1 )
custom_colors/font_color_hover = Color( 0.6, 0.615686, 0.623529, 1 )
custom_colors/font_color_pressed = Color( 0.6, 0.615686, 0.623529, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = SubResource( 27 )
custom_styles/pressed = SubResource( 27 )
custom_styles/focus = SubResource( 27 )
custom_styles/normal = SubResource( 27 )
text = "Logout"

[node name="Back" parent="ProfileDialog" instance=ExtResource( 20 )]
text = "Back"

[connection signal="pressed" from="Screens/LoginScreen/Main/Guest" to="." method="_on_Guest_pressed"]
[connection signal="pressed" from="Screens/UserScreen/VBoxContainer/ObjectNaming" to="Screens/UserScreen" method="_on_ObjectNaming_pressed"]
[connection signal="pressed" from="Screens/UserScreen/VBoxContainer/Leaderboard" to="Screens/UserScreen" method="_on_Leaderboard_pressed"]
